# simple

./: Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  poetry.toml  pyproject.toml
.github/workflows/: main.yml
core/: tests.py
simple/: settings.py
