[project]
name = "simple"
version = "0.1.0"
description = ""
authors = [
    {name = "ahmed.mohamed",email = "ahmedelmawrdy2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "django (>=5.2.5,<6.0.0)",
    "ruff (>=0.12.9,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
